# AT3-DataProductwithML-Group9-Streamlit

./: .env  Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: main.py
students/: monika.py  monika_eth.py  tung.py  vandoan.py  yamuna.py
