[tool.poetry]
name = "at3-dataproductwithml-group9-streamlit"
version = "0.1.0"
description = "Streamlit dashboard for TRON prediction"
authors = ["Group 9 <group9@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"
requests = ">=2.32.5,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
watchdog = ">=6.0.0,<7.0.0"
apscheduler = ">=3.11.1,<4.0.0"
plotly = "^6.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
